src/it/resources/regression/verification/invalid/Array5.scala
/* Copyright 2009-2016 EPFL, Lausanne */

import leon.lang._

object Array5 {

  def foo(a: Array[Int]): Int = {
    a(2)
  }

}
